# hlsdk-cmake

./: CMakeLists.txt
cl_dll/: ammo.cpp  ammo_secondary.cpp  ammohistory.cpp  battery.cpp  cl_util.h  death.cpp  health.cpp  hud_bench.cpp  hud_redraw.cpp  menu.cpp  overview.cpp  saytext.cpp  statusbar.cpp  vgui_ScorePanel.cpp  vgui_ScorePanel.h  vgui_ServerBrowser.cpp  view.cpp  voice_status.cpp
cl_dll/hl/: hl_weapons.cpp
dlls/: apache.cpp  cdll_dll.h  client.cpp  combat.cpp  effects.cpp  extdll.h  hassassin.cpp  items.cpp  maprules.cpp  monsters.cpp  multiplay_gamerules.cpp  nihilanth.cpp  nodes.cpp  player.cpp  sound.cpp  talkmonster.cpp  turret.cpp  util.cpp  weapons.cpp
